1999-08-27  Tim Jenness  <timj@jach.hawaii.edu>

	* Group/UKIRT.pm: add calc_orac_headers 

	* Group/UFTI.pm (calc_orac_headers): Add calc_orac_headers

1999-08-26  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame.pm (erase): Add file_exists() method.

	* Frame/UKIRT.pm: Move NDF stuff to NDF.pm

	* Frame/JCMT.pm: Move NDF stuff to NDF.pm

	* Core.pm (orac_store_frm_in_correct_grp): Add Grp->readhdr if the 
	Grp file exists.

1999-08-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Group/UKIRT.pm: Inherit from ORAC::Group::NDF

	* Group/UFTI.pm: Inherit from ORAC::Group::NDF

	* Group/JCMT.pm: Inherit from ORAC::Group::NDF

	* Core.pm: Add support for -resume flag.

	* Group.pm: Add support for coadds(), (inc file_exists and erase)

1999-08-24  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (orac_store_frm_in_correct_grp): Dont set raw()
	explicitly. Set name().

	* Group.pm (file): Automatically set raw() if raw() is undefined.

1999-07-26  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm: Add LWP::Simple

1999-07-08  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/SCUBA.pm (start_algorithm_engines): Add ndf2fits

1999-07-02  Tim Jenness  <timj@jach.hawaii.edu>

	* SCUBA.pm: Change typo from polpack_reg to ccdpack_reg

1999-06-02  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/UKIRT.pm (findrecipe): Fix documentation typo.
	(stripfname): Make this generic.

	* Frame/UFTI.pm (findrecipe): Fix recipe method so that it matches 
	new format. Use base constructor. Remove stripfname.

	* Frame/IRCAM.pm (new): Remove stripfname method.

1999-06-01  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm (config_regions): Configure regions once and
	then select them as required.

1999-05-30  Tim Jenness  <timj@jach.hawaii.edu>

	* Display.pm (display_data): Allow for the display definition not
	to be read if using supplied values.

1999-05-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Print.pm (orac_read): Create readline interface on request
	rather than at start.
