@@ -1,3 +1,7 @@
+1999-08-31  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* TempFile.pm: KLUGE use of File::MkTemp rather than POSIX tmpnam.
+
 1999-08-27  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Group/UKIRT.pm: add calc_orac_headers 
